--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
-sonar.projectKey=<YOUR_PROJECT_KEY>
-sonar.organization=<YOUR_ORG>
+sonar.projectKey=anujtimsina55_SIT753-7.3HD
+sonar.organization=anujtimsina55
 sonar.host.url=https://sonarcloud.io
 sonar.sourceEncoding=UTF-8
 
-# Focus analysis on server code
 sonar.sources=server/src
-sonar.tests=server/tests,server/__tests__
+sonar.tests=server/src/tests
 sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
