--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,13 @@ sonar.organization=anujtimsina55
 sonar.host.url=https://sonarcloud.io
 sonar.sourceEncoding=UTF-8
 
+# Only source code, exclude tests
 sonar.sources=server/src
+sonar.exclusions=server/src/tests/**
+
+# Explicit test folder
 sonar.tests=server/src/tests
+sonar.test.inclusions=server/src/tests/**/*.test.js
+
+# Coverage report
 sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
